--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pandas>=2.0.0
 # Additional utilities
 requests==2.31.0
 python-dateutil==2.9.0.post0
+pytz>=2024.1
 
 # Optional: For scheduling
 schedule==1.2.2
